cmake_minimum_required(VERSION 3.17)
project(cpp)

set(CMAKE_CXX_STANDARD 20)


add_executable(AskMyFavoriteNumber p2/AskMyFavoriteNumber.cpp)
add_executable(main p1/main.cpp)
add_executable(BasicIO p3/BasicIO.cpp)
add_executable(PrimitveDataTypes p4/PrimitveDataTypes.cpp)
add_executable(Constants p5/Constants.cpp)
add_executable(Arrays p6/Arrays_And_Vectors.cpp)
add_executable(Vector p6/Vector.cpp)
add_executable(AverageInt p7/AverageInt.cpp)
add_executable(BooleanPractice p7/BooleanPractice.cpp)
add_executable(Cents p7/Cents.cpp)
add_executable(ConditionalOperator p8/ConditionalOperator.cpp)
add_executable(CaseSwitch p8/CaseSwitch_and_Enum.cpp)
add_executable(ForLoop p8/ForLoop.cpp)
add_executable(Challenge p8/Challenge.cpp)
add_executable(Cstrings p9/Cstrings_AND_C++Strings.cpp)
add_executable(Challenge2 p9/Challenge2.cpp)
add_executable(PyramidAssignment p9/PyramidAssignment.cpp)
add_executable(RandomGenerator p10/RandomGenerator.cpp)
add_executable(Functions p10/Functions.cpp)
add_executable(Scope p10/Scope.cpp)
add_executable(Challenge3 p10/Challenge3.cpp)
add_executable(Pointer p11/Pointer.cpp)
add_executable(DynamicMemory p11/DynamicMemory.cpp)
add_executable(PointerAritmetic p11/PointerAritmetic.cpp)
add_executable(PassingPointerFunc p11/PassingPointerFunc.cpp)
add_executable(References p11/References.cpp)
add_executable(challenge4 p11/challenge4.cpp)
add_executable(ClassesInC++ p12/ClassesInC++.cpp )


add_executable(ClassMethods p12/ClassMethods.cpp)
add_executable(Account p12/Account.cpp)
add_executable(BisectionalSearch p12/BisectionalSearch.cpp)
add_executable(Constructors p12/Constructors.cpp)
add_executable(Constructors2 p12/Constructors2.cpp)
add_executable(Constructors3 p12/Constructors3.cpp)
add_executable(Constructors4 p12/Constructors4.cpp)
add_executable(MoveConstructor p12/MoveConstructor.cpp)
add_executable(ConstClasses p12/ConstClasses_StaticClasses.cpp)

add_executable(Player p12/Player.cpp)
add_executable(StaticClassTest p12/StaticClassTest.cpp)
add_executable(Structs p12/Structs.cpp)
add_executable(FriendsOfClasses p12/FriendsOfClasses.cpp)
add_executable(Movie p12/Challenge5/Movie.cpp)

add_executable(Movies p12/Challenge5/Movies.cpp)
add_executable(Main p12/Challenge5/Output.cpp)
add_executable(Output p12/Challenge5/Output.cpp)